fixed spacing around checkbox

--- a/client/spotFinder.css
+++ b/client/spotFinder.css
@@ -15,8 +15,8 @@ div{
 
 .login{
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 10px;
+    right: 10px;
 }
 
 #logo{
@@ -41,10 +41,10 @@ div{
     padding: 0px;
 }
 
-#filters{
-    position: absolute;
-    margin: 0px;
-    margin-top: 10px;
-    margin-left: 10px;
-    width: 200px;
+.filter{
+    margin: 20px;
+}
+
+input[type=checkbox]{
+    margin-right: 10px;
 }
